# ProjectOne

./: .gitignore  package-lock.json  package.json  start_system.bat
Omni/OTA0_FirwareUpdate/main/: main.c
Omni/OTA1_Omni/: CMakeLists.txt  sdkconfig  sdkconfig.old
Omni/OTA1_Omni/main/: CMakeLists.txt  main.c
Omni/OTA1_Omni/main/BNO055/: bno055.c  nvs_handler.c
Omni/OTA1_Omni/main/BNO055/include/: bno055.h  nvs_handler.h
Omni/OTA1_Omni/main/inc/: LPF.h  bno055_handler.h  encoder_handler.h  gpio_handler.h  kalman_filter.h  motor_handler.h  omni_control.h  pid_handler.h  sys_config.h  wifi_handler.h
Omni/OTA1_Omni/main/src/: LPF.c  bno055_handler.c  encoder_handler.c  kalman_filter.c  log_handler.c  motor_handler.c  omni_control.c  pid_handler.c  wifi_handler.c
back/: connection_manager.py  direct_bridge.py  env_config.txt  robot_data.db-shm  robot_data.db-wal  simulate_robots.py
front/: package-lock.json  package.json
front/src/: App.tsx  ConnectionStatusWidget.tsx  index.css  index.tsx  main.tsx
front/src/components/: ConnectionStatusWidget.tsx  DraggableWidget.tsx  EncoderDataWidget.tsx  FeatureItem.tsx  FirmwareUpdateWidget.tsx  IMUWidget.tsx  MainArea.tsx  PIDControlWidget.tsx  PlacedWidget.tsx  RobotContext.tsx  RobotControlWidget.tsx  RobotSelector.tsx  RobotStatusWidget.tsx  ServerControlWidget.tsx  TCPServerStatusButton.tsx  TrajectoryWidget.tsx  WebSocketContext.tsx  WidgetConnectionHeader.tsx
front/src/hooks/: useUnifiedWebSocket.ts
front/src/services/: ApiService.ts  DataAdapterService.ts  TcpWebSocketService.ts  UnifiedWebSocketService.ts  (+3 more)
